# simple-calories-counter

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: actions.rs  entities.rs  main.cpp  main.rs
src/actions/: action.rs  add_food_intake.rs  add_product.rs  info_today.rs  input.rs
src/db/: init.rs  utils.rs
src/entities/: food_intake.rs  product.rs
